changed the background color on all pages

--- a/web_app/frontend/src/index.css
+++ b/web_app/frontend/src/index.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-    --cream: #f5f1e8;
+    --cream: #F8F3F0;
     --warm-beige: #e8e0d3;
     --rustic-brown: #8b7355;
     --dark-brown: #5c4a37;
